Book API and base setUp updated
