# src/router/book.route.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const router = express.Router();
+const { bookController } = require("../controller/book.controller");
+
+router.get("/book-List", bookController.bookList);
+router.get("/bookById/:id", bookController.bookById);
+
+module.exports = router;
